# ai-doc-trans

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: project-structure.mdc
docs/DesignDocument/: BD.md  CLI-sample.md  SR.md  cursor-translate-prompt.md
docs/idea/: requirement.md
docs/sample/: glossary_global.csv  mywork.md  rules_global.csv  translated.csv
scripts/: translate_segments.py
src/ai_doc_trans/: __main__.py  cli.py  exceptions.py  hash_utils.py  models.py
src/ai_doc_trans/compare/: excel.py
src/ai_doc_trans/engine/: glossary.py  importer.py  tm.py  translate.py  translator.py
src/ai_doc_trans/extractors/: base.py  excel.py
src/ai_doc_trans/io/: glossary_csv.py  segments.py  segments_csv.py
src/ai_doc_trans/rebuilders/: base.py  excel.py
tests/: create_sample.py  patch_translations.py  sample.xlsx  sample_glossary.csv  sample_rules.csv  sample_rules_multi.csv  sample_rules_old_format.csv
