[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-doc-trans"
version = "0.1.0"
description = "Document translation tool with Translation Memory support"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "python-pptx>=0.6",
]

[project.scripts]
ai-doc-trans = "ai_doc_trans.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
